--- a/rfm_analysis.ipynb
+++ b/rfm_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "2c3689fb-2095-4c81-992b-61ea2aa27836",
    "metadata": {},
    "source": [
-    "# Portofolio: RFM Analysis - Optimize Business Strategy using Customer Data Analysis"
+    "# Portofolio: RFM Analysis - Optimize Business Strategy using Customer Data Analysis in Python"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "id": "ffbce434-8961-4f81-bd13-a3c22e9e7acb",
    "metadata": {},
    "source": [
-    "### Load Library and Dataset"
+    "### Data Acquisition"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "metadata": {},
    "source": [
     "NOTE:\n",
-    "- tanggal_transaksi which means datetime is still an object. we can change data format in preprocessing section.\n",
+    "- transaction_date which means datetime is still an object. we can change data format in preprocessing section.\n",
     "- the data has no missing value\n",
     "- the data has no duplicated value"
    ]
