publish cohort_analysis

--- a/rfm_analysis.ipynb
+++ b/rfm_analysis.ipynb
@@ -66,7 +66,7 @@
    "id": "8b5a1787-05d5-4829-a9a8-665abc991054",
    "metadata": {},
    "source": [
-    "We well use seblak prasmanan database. Seblak prasmanan is one of the new traditional Indonesian food. It's a boiled krupuk with various topping and what make seblak prasmanan special is you can take only topping that you like as many as you want.\n",
+    "We will use seblak prasmanan database. Seblak prasmanan is one of the new traditional Indonesian food. It's a boiled krupuk with various topping and what make seblak prasmanan special is you can take only topping that you like as many as you want.\n",
     "\n",
     "This analysis is using Python as the main tool to process the data and the RFM analysis. We will not use all variables to analyze. We only need the id_customer, transaction_date, and money_spent."
    ]
