create_survival_analysis

--- a/ab_testing_numerical.ipynb
+++ b/ab_testing_numerical.ipynb
@@ -559,7 +559,7 @@
    ],
    "source": [
     "figure('big')\n",
-    "sns.histplot(dataset_clean['purchase'])\n",
+    "sns.histplot(dataset_clean['purchase'], kde=True)\n",
     "plt.show()"
    ]
   },
