finish funnel analysis

--- a/cohort_analysis.ipynb
+++ b/cohort_analysis.ipynb
@@ -13,7 +13,7 @@
    "id": "d1c2e895-4463-4c98-b8b6-5ded26ea0f1d",
    "metadata": {},
    "source": [
-    "## Business Understanding"
+    "# Business Understanding"
    ]
   },
   {
@@ -21,14 +21,8 @@
    "id": "7d9796aa-c36d-4e0c-a4e8-5f8344a7d21a",
    "metadata": {},
    "source": [
-    "### Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c1e24b6-5cf4-4733-96bf-be82dc4577a8",
-   "metadata": {},
-   "source": [
+    "## Introduction\n",
+    "\n",
     "Cohort analysis is one of the low complexity but high impact to the business decision. Like RFM analysis, cohort analysis also tries to segment customers based on their characteristics such as channel acquisition or their first time purchase. The group is called cohort. One of the most used variable is transaction date."
    ]
   },
@@ -37,14 +31,8 @@
    "id": "2f080676-d97c-4b82-aad1-22dc92abbe1b",
    "metadata": {},
    "source": [
-    "### Objectives"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d207896f-4f4c-46d8-8db6-3b71b80eda93",
-   "metadata": {},
-   "source": [
+    "## Objectives\n",
+    "\n",
     "This analysis aims to find trend and pattern of customer behaviour based on the month they first time purchased. These objectives include:\n",
     "- which cohort has the most new customers.\n",
     "- how much percentage of retention and churn rate month to month."
@@ -55,14 +43,8 @@
    "id": "0468064b-0433-45d2-8a54-eec135d3ed79",
    "metadata": {},
    "source": [
-    "### Dataset and Tools Needed"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "065e530b-4a6a-461e-af37-c92ee7f30b04",
-   "metadata": {},
-   "source": [
+    "## Dataset and Tools Needed\n",
+    "\n",
     "We will use seblak prasmanan database. Seblak prasmanan is one of the new traditional Indonesian food. It's a boiled krupuk with various topping and what make seblak prasmanan special is you can take only topping that you like as many as you want.\n",
     "\n",
     "The tools we need for this analysis is only Python programming language and the library such as numpy, pandas, datetime, matplotlib, and seaborn. "
@@ -73,14 +55,8 @@
    "id": "6d3aadad-3148-4bdb-8b00-313d1fed1ea3",
    "metadata": {},
    "source": [
-    "### Methodology"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d0e1a3b2-1be3-4389-ab06-a109df66af7a",
-   "metadata": {},
-   "source": [
+    "## Methodology\n",
+    "\n",
     "For this analysis, we only need customer_id and transaction date where later we will do some data preprocessing to find their first time purchase and other metrics. Here are the steps to do cohort analysis:\n",
     "- find the first time purchase for each customer. name it as cohort month.\n",
     "- use like distinct function in order to make one customer if purchases many times at the same month, count as one time for transaction month.\n",
@@ -93,7 +69,7 @@
    "id": "249fc3a8-42ac-409f-a6ca-221b9adccbc8",
    "metadata": {},
    "source": [
-    "## Data Understanding"
+    "# Data Understanding"
    ]
   },
   {
@@ -101,7 +77,7 @@
    "id": "6fa42d62-ddd6-4b6b-aebc-ef62821b1cee",
    "metadata": {},
    "source": [
-    "### Data Acquisition"
+    "## Data Acquisition"
    ]
   },
   {
@@ -126,12 +102,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   customer_id transaction_date       city customers  purchase\n",
-      "0            7       2023-09-23     Bekasi    member       136\n",
-      "1           22       2023-05-05      Depok    member       142\n",
-      "2           36       2023-12-16  Tangerang    member       156\n",
-      "3           28       2023-03-19     Bekasi    member       179\n",
-      "4           24       2023-01-19     Bekasi    member       164\n"
+      "   customer_id transaction_date       city customer_type  purchase\n",
+      "0            7       2023-09-23    Jakarta        member       193\n",
+      "1           22       2023-05-05    Jakarta        member       160\n",
+      "2           31       2023-10-05  Tangerang        member       194\n",
+      "3           50       2023-10-12    Jakarta        member       171\n",
+      "4           13       2023-08-15     Bekasi        member       177\n"
      ]
     }
    ],
@@ -145,7 +121,7 @@
    "id": "5e73ca2f-c271-4284-9c5a-ee4acb9633af",
    "metadata": {},
    "source": [
-    "### Data Profiling"
+    "## Data Profiling"
    ]
   },
   {
@@ -166,7 +142,7 @@
       " 0   customer_id       3936 non-null   int64 \n",
       " 1   transaction_date  3936 non-null   object\n",
       " 2   city              3936 non-null   object\n",
-      " 3   customers         3936 non-null   object\n",
+      " 3   customer_type     3936 non-null   object\n",
       " 4   purchase          3936 non-null   int64 \n",
       "dtypes: int64(2), object(3)\n",
       "memory usage: 153.9+ KB\n"
@@ -190,7 +166,7 @@
        "customer_id         0\n",
        "transaction_date    0\n",
        "city                0\n",
-       "customers           0\n",
+       "customer_type       0\n",
        "purchase            0\n",
        "dtype: int64"
       ]
@@ -214,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "np.int64(0)"
+       "np.int64(1)"
       ]
      },
      "execution_count": 5,
@@ -268,7 +244,7 @@
       " 0   customer_id       3936 non-null   int64         \n",
       " 1   transaction_date  3936 non-null   datetime64[ns]\n",
       " 2   city              3936 non-null   object        \n",
-      " 3   customers         3936 non-null   object        \n",
+      " 3   customer_type     3936 non-null   object        \n",
       " 4   purchase          3936 non-null   int64         \n",
       "dtypes: datetime64[ns](1), int64(2), object(2)\n",
       "memory usage: 153.9+ KB\n"
@@ -284,7 +260,7 @@
    "id": "519f547f-e632-4d9b-8ee4-a5fe06843677",
    "metadata": {},
    "source": [
-    "### Descriptive Statistics"
+    "## Descriptive Statistics"
    ]
   },
   {
@@ -308,13 +284,13 @@
        "68     28\n",
        "21     24\n",
        "136    24\n",
-       "38     23\n",
        "71     23\n",
+       "38     23\n",
        "       ..\n",
-       "412     1\n",
-       "416     1\n",
        "408     1\n",
-       "421     1\n",
+       "257     1\n",
+       "543     1\n",
+       "324     1\n",
        "571     1\n",
        "Name: count, Length: 552, dtype: int64"
       ]
@@ -339,16 +315,16 @@
       "text/plain": [
        "transaction_date\n",
        "2023-11-15    34\n",
-       "2023-12-08    28\n",
        "2023-12-31    28\n",
+       "2023-12-08    28\n",
        "2023-10-06    27\n",
        "2023-12-24    26\n",
        "              ..\n",
-       "2023-01-27     1\n",
-       "2023-01-06     1\n",
-       "2023-01-02     1\n",
+       "2023-01-05     1\n",
+       "2023-02-20     1\n",
        "2023-03-29     1\n",
-       "2023-02-13     1\n",
+       "2023-04-06     1\n",
+       "2023-01-02     1\n",
        "Name: count, Length: 362, dtype: int64"
       ]
      },
@@ -366,7 +342,7 @@
    "id": "835d4047-82e5-49da-b545-49aadfa1083e",
    "metadata": {},
    "source": [
-    "## Data Preprocessing"
+    "# Data Preprocessing"
    ]
   },
   {
@@ -420,19 +396,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   customer_id transaction_date       city customers  purchase  \\\n",
-      "0            7       2023-09-23     Bekasi    member       136   \n",
-      "1           22       2023-05-05      Depok    member       142   \n",
-      "2           36       2023-12-16  Tangerang    member       156   \n",
-      "3           28       2023-03-19     Bekasi    member       179   \n",
-      "4           24       2023-01-19     Bekasi    member       164   \n",
+      "   customer_id transaction_date       city customer_type  purchase  \\\n",
+      "0            7       2023-09-23    Jakarta        member       193   \n",
+      "1           22       2023-05-05    Jakarta        member       160   \n",
+      "2           31       2023-10-05  Tangerang        member       194   \n",
+      "3           50       2023-10-12    Jakarta        member       171   \n",
+      "4           13       2023-08-15     Bekasi        member       177   \n",
       "\n",
       "  transaction_month cohort_month  \n",
       "0        2023-09-01   2023-01-01  \n",
       "1        2023-05-01   2023-02-01  \n",
-      "2        2023-12-01   2023-01-01  \n",
-      "3        2023-03-01   2023-01-01  \n",
-      "4        2023-01-01   2023-01-01  \n"
+      "2        2023-10-01   2023-01-01  \n",
+      "3        2023-10-01   2023-01-01  \n",
+      "4        2023-08-01   2023-01-01  \n"
      ]
     }
    ],
@@ -505,19 +481,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   customer_id transaction_date       city customers  purchase  \\\n",
-      "0            7       2023-09-23     Bekasi    member       136   \n",
-      "1           22       2023-05-05      Depok    member       142   \n",
-      "2           36       2023-12-16  Tangerang    member       156   \n",
-      "3           28       2023-03-19     Bekasi    member       179   \n",
-      "4           24       2023-01-19     Bekasi    member       164   \n",
+      "   customer_id transaction_date       city customer_type  purchase  \\\n",
+      "0            7       2023-09-23    Jakarta        member       193   \n",
+      "1           22       2023-05-05    Jakarta        member       160   \n",
+      "2           31       2023-10-05  Tangerang        member       194   \n",
+      "3           50       2023-10-12    Jakarta        member       171   \n",
+      "4           13       2023-08-15     Bekasi        member       177   \n",
       "\n",
       "  transaction_month cohort_month  index_cohort  \n",
       "0        2023-09-01   2023-01-01             8  \n",
       "1        2023-05-01   2023-02-01             3  \n",
-      "2        2023-12-01   2023-01-01            11  \n",
-      "3        2023-03-01   2023-01-01             2  \n",
-      "4        2023-01-01   2023-01-01             0  \n"
+      "2        2023-10-01   2023-01-01             9  \n",
+      "3        2023-10-01   2023-01-01             9  \n",
+      "4        2023-08-01   2023-01-01             7  \n"
      ]
     }
    ],
@@ -588,7 +564,7 @@
    "id": "0c8fa258-9765-434c-ad8b-e119636bdf84",
    "metadata": {},
    "source": [
-    "## Modeling"
+    "# Modeling"
    ]
   },
   {
@@ -624,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "23f046f1-af14-4190-91c5-25fe2c709124",
    "metadata": {},
    "outputs": [
@@ -649,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "id": "b52501f4-59b1-4eb9-a961-b3c1d742c4fd",
    "metadata": {},
    "outputs": [
@@ -677,7 +653,7 @@
    "id": "0f7a520d-f2f5-4116-b0d4-0a75072c9381",
    "metadata": {},
    "source": [
-    "## Insights"
+    "# Insights"
    ]
   },
   {
@@ -685,14 +661,8 @@
    "id": "2ba10b7b-0d09-4cf1-b750-295624934875",
    "metadata": {},
    "source": [
-    "### Interpretation and Reporting"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "efe6be47-502b-43dd-867c-cfda8c1416f3",
-   "metadata": {},
-   "source": [
+    "## Interpretation and Reporting\n",
+    "\n",
     "This cohort table contains twelve month observation where first month is January and the last month is December. The highest amount of acquisition is in October, 59 new customers and the lowest amount of acquisition is in January and February with 37 new customers. In December, almost all cohort month has more than 50% retention which is still acceptable. Only cohort July has 48% retention rate in December. There are 80% of new customers from cohort May comes back to purchase in November which is great."
    ]
   },
@@ -701,14 +671,8 @@
    "id": "0b9e79ee-2d7f-4304-ba7b-6d73ebd6daca",
    "metadata": {},
    "source": [
-    "### Actions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "97352f49-81d0-47a6-865f-2c7b33a72512",
-   "metadata": {},
-   "source": [
+    "## Actions\n",
+    "\n",
     "We know that it's a good job to reach 50% retention rate. But, there are still some space we can improve to increase customer retention rate. Retention is where the customers purchase more than one time. Higher retention rate means high frequency of customers purchasing our products. There are some actions we can apply for our marketing strategy, here they are:\n",
     "- increase customer **satisfaction** by prioritizing great customer service and support.\n",
     "- improve product from package or feature, build quality or experiences, and ease of use or price to meet the needs of customers.\n",
@@ -720,26 +684,12 @@
    "id": "08d160b1-5736-4e01-9100-95214f746eed",
    "metadata": {},
    "source": [
-    "### Further Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0a509f8a-afad-4d83-b035-7110e0c06a70",
-   "metadata": {},
-   "source": [
+    "## Further Analysis\n",
+    "\n",
     "- do churn analysis to understand churn rate, identifying what factors make customers stop purchasing or using our products.\n",
     "- do survival analysis to understand customer lifetime value, predicting how often customers will purchase.\n",
     "- do comparative analysis like t-test to understand whether the customers with membership do more purchase rather than casual customers."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89f5992e-6f88-4ba7-8bb9-9e81048b3d75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
